`Added new routes and API endpoints for user entries` Added new collection : entries
